env set to production

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:jSg6nTVKyB5gxO2sj4+w6HWK6zpvkRYNXsT8J+EmxO0=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
