--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:jSg6nTVKyB5gxO2sj4+w6HWK6zpvkRYNXsT8J+EmxO0=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=infoalerts
+DB_USERNAME=user
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
